# FP_Dash

./: .gitmodules  README.md
firmware/: .gitmodules  CMakeLists.txt  README.md
firmware/components/gui/: CMakeLists.txt
firmware/components/gui/fp_dash/: fp_dash.eez-project  fp_dash.eez-project-ui-state
firmware/components/gui/fp_dash/src/ui/: actions.h  screens.c  screens.h  ui.c
firmware/components/gui_handlers/: CMakeLists.txt  actions.c  ts_calib.c  ts_calib.h
firmware/components/isotp/: CMakeLists.txt
firmware/components/obd_handler/: CMakeLists.txt  obd_handler.c  obd_handler.h  obd_handler_types.h
firmware/main/: CMakeLists.txt  can.c  can.h  idf_component.yml  lcd.c  lcd.h  led.c  led.h  main.c
